syntax = "proto3";

package management;

option go_package = "github.com/makhkets/management/pkg/api/management/v1;managementv1";

import "google/protobuf/timestamp.proto";

// ============================================================================
// MESSAGES - Nodes (Proxmox ноды)
// ============================================================================

message Node {
  int32 id = 1;
  string name = 2;
  string api_url = 3;
  int32 max_cpu = 4;
  int32 max_ram = 5;
  int32 max_disk = 6;
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8;
}

message CreateNodeRequest {
  string name = 1;
  string api_url = 2;
  int32 max_cpu = 3;
  int32 max_ram = 4;
  int32 max_disk = 5;
}

message UpdateNodeRequest {
  int32 id = 1;
  optional string api_url = 2;
  optional int32 max_cpu = 3;
  optional int32 max_ram = 4;
  optional int32 max_disk = 5;
  optional bool is_active = 6;
}

message GetNodeRequest {
  int32 id = 1;
}

message ListNodesRequest {
  bool active_only = 1;
}

message ListNodesResponse {
  repeated Node nodes = 1;
}

message NodeUtilization {
  int32 node_id = 1;
  string node_name = 2;
  int32 max_cpu = 3;
  int32 max_ram = 4;
  int32 max_disk = 5;
  int32 vds_count = 6;
  int32 used_cpu = 7;
  int32 used_ram = 8;
  int32 used_disk = 9;
  double cpu_usage_pct = 10;
  double ram_usage_pct = 11;
  double disk_usage_pct = 12;
}
